--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://cagkaizen010.github.io/HiveTV-Website",
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
+    "classnames": "^2.3.1",
     "gh-pages": "^4.0.0",
     "particlesjs": "^2.2.3",
     "react": "^18.2.0",
